--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: v1-{{ arch }}-cache-{{ checksome "package.json" }}
+          key: v1-{{ arch }}-cache-{{ checksum "package.json" }}
       - run:
           name: Setup Code Climate Test Reporter
           command: |
