--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,12 +33,12 @@ jobs:
       - run:
           name: Run Test
           command: yarn test | npx tap-xunit > test-results/ava/results.xml
-      - run:
-          name: Coverage Report
-          command: |
-            ./cc-test-reporter before-build
-            yarn run coverage > coverage-report.lcov
-            ./cc-test-reporter after-build -d --coverage-input-type lcov --exit $?
+      # - run:
+      #     name: Coverage Report
+      #     command: |
+      #       ./cc-test-reporter before-build
+      #       yarn run coverage > coverage-report.lcov
+      #       ./cc-test-reporter after-build -d --coverage-input-type lcov --exit $?
       - store_artifacts:
           path: test-results/ava/results.xml
           destination: test-results/ava/
