--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,13 +32,13 @@ jobs:
           command: mkdir -p test-results/ava
       - run:
           name: Run Test
-          command: yarn test
-      # - run:
-      #     name: Coverage Report
-      #     command: |
-      #       ./cc-test-reporter before-build
-      #       yarn run coverage > coverage-report.lcov
-      #       ./cc-test-reporter after-build -d --coverage-input-type lcov --exit $?
+          command: yarn test | npx tap-xunit
+      - run:
+          name: Coverage Report
+          command: |
+            ./cc-test-reporter before-build
+            yarn run coverage > coverage-report.lcov
+            ./cc-test-reporter after-build -d --coverage-input-type lcov --exit $?
       - store_artifacts:
           path: test-results/ava/results.xml
           destination: test-results/ava/
