--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           command: mkdir -p test-results/ava
       - run:
           name: Run Test
-          command: yarn test | npx tap-xunit
+          command: yarn test
       - run:
           name: Coverage Report
           command: |
