--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,9 +32,7 @@ jobs:
           command: mkdir -p test-results/ava
       - run:
           name: Run Test
-          command: |
-            npm install tap-xunit
-            yarn test | tap-xunit > test-results/ava/results.xml
+          command: yarn test | npx tap-xunit-circleci > test-results/ava/results.xml
       - run:
           name: Coverage Report
           command: |
